--- a/app/src/main/res/layout/activity_catch_entry_inches.xml
+++ b/app/src/main/res/layout/activity_catch_entry_inches.xml
@@ -4,21 +4,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/Log_yellow"
+    android:background="@color/clip_orange"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CatchEntryInches">
 
     <!-- Page Label -->
     <TextView
-        android:id="@+id/txtTodaysLogInches"
+        android:id="@+id/txtTodaysLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="39dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="26dp"
-        android:text="Inches fishing log "
+        android:text="todays fishing log inches"
         android:textAllCaps="true"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -28,87 +28,49 @@
 
     <!-- btn Goto Set Up Page -->
     <Button
-        android:id="@+id/btnSetUpInches"
+        android:id="@+id/btnSetUp3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
         android:text="@string/goto_SetUp_description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toBottomOf="@id/txtTodaysLogInches" />
+        app:layout_constraintTop_toBottomOf="@id/txtTodaysLog" />
 
-    <!-- Weight Label -->
-
-    <!-- Lbs Spinner -->
     <TextView
-        android:id="@+id/lengthLabel"
+        android:id="@+id/txtAddCatch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:text="Enter Inches:"
+        android:text="Add Catch:"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/btnSetUpInches" />
-
-
-    <!-- Inch Spinner -->
-    <Spinner
-        android:id="@+id/inchesSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginStart="15dp"
-        app:layout_constraintStart_toStartOf="@id/lengthLabel"
-        app:layout_constraintTop_toBottomOf="@id/lengthLabel" />
-
-    <TextView
-        android:id="@+id/inchesText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="X/8th"
-        android:textSize="16sp"
-        app:layout_constraintTop_toTopOf="@id/inchesSpinner"
-        app:layout_constraintStart_toEndOf="@id/inchesSpinner"
-        android:layout_marginStart="8dp"/>
-
-    <!-- 8th Inch Spinner -->
-
-    <Spinner
-        android:id="@+id/eightSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintStart_toEndOf="@id/inchesText"
-        app:layout_constraintTop_toTopOf="@id/inchesSpinner" />
-
-    <!-- Species Spinner -->
-    <Spinner
-        android:id="@+id/speciesSpinner"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginStart="16dp"
-        android:background="@color/clip_white"
-        android:entries="@array/species_list"
-        app:layout_constraintEnd_toStartOf="@id/saveCatchButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/saveCatchButton" />
-
-
-    <!-- Save Button -->
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@id/txtTodaysLog"
+        app:layout_constraintTop_toBottomOf="@id/btnSetUp3"  />
+    <!-- btn btnAddCatch by Goto Popup Page -->
 
     <Button
-        android:id="@+id/saveCatchButton"
+        android:id="@+id/btnOpenLengthPopup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="@string/addCatchBtn"
+        app:layout_constraintEnd_toStartOf="@+id/btnSetUp3"
+        app:layout_constraintHorizontal_bias="0.294"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtAddCatch" />
+
+    <!-- Save Button -->
+    <Button
+        android:id="@+id/btnSaveCatch"
         android:layout_width="199dp"
         android:layout_height="53dp"
-        android:layout_marginTop="192dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="15dp"
         android:text="@string/save_catch"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtAddCatch"
         app:layout_constraintEnd_toEndOf="parent" />
-
 
     <!-- List of Todays Catch -->
     <ListView
@@ -119,9 +81,11 @@
         android:dividerHeight="1dp"
         android:scrollbars="vertical"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/saveCatchButton"
+        app:layout_constraintTop_toBottomOf="@id/btnSaveCatch"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
