--- a/app/src/main/res/layout/activity_catch_entry_kgs.xml
+++ b/app/src/main/res/layout/activity_catch_entry_kgs.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tensSpinner"
+    android:background="@color/clip_orange"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Log_orange"
     tools:context=".CatchEntryKgs">
 
     <!-- Page Label -->
@@ -17,113 +18,71 @@
         android:layout_marginTop="39dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="26dp"
-        android:text="Kgs_Fishing_Log"
+        android:text="todays fishing log Kgs"
         android:textAllCaps="true"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnSetUp3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- btn Goto Set Up Page -->
-
     <Button
         android:id="@+id/btnSetUp3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
         android:text="@string/goto_SetUp_description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTodaysLog" />
-
-
-
-    <!-- Weight Label -->
+        app:layout_constraintTop_toBottomOf="@id/txtTodaysLog" />
 
     <TextView
-        android:id="@+id/weightLabel"
+        android:id="@+id/txtAddCatch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
-        android:text="Enter Weight: Kg, X.XX"
+        android:text="Add Catch:"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSetUp3"/>
-
-    <TextView
-        android:id="@+id/decimalText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="   dec"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@id/weightLabel"
-        app:layout_constraintTop_toTopOf="@id/weightLabel" />
-
-      <!--KG  Spinner -->
-
-    <!-- tenth Spinner -->
-
-    <Spinner
-        android:id="@+id/weightKgSpinner"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/weightLabel"
-        app:layout_constraintTop_toBottomOf="@id/weightLabel" />
-
-    <Spinner
-        android:id="@+id/decimalSpinner"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        app:layout_constraintStart_toEndOf="@id/weightKgSpinner"
-        app:layout_constraintTop_toBottomOf="@id/weightLabel" />
-
-    <!-- Hundredth Spinner -->
-
-    <Spinner
-        android:id="@+id/hundredthSpinner"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        app:layout_constraintStart_toEndOf="@id/decimalSpinner"
-        app:layout_constraintTop_toBottomOf="@id/weightLabel"
-        />
-
-
-
-    <!-- Species  Spinner -->
-
-    <Spinner
-        android:id="@+id/speciesSpinner"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:background="@color/clip_white"
-        android:entries="@array/species_list"
-        android:layout_marginStart="16dp"
-        android:spinnerMode="dropdown"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saveCatchButton" />
-
-
-    <!-- Save Button -->
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@id/txtTodaysLog"
+        app:layout_constraintTop_toBottomOf="@id/btnSetUp3"  />
+    <!-- btn btnAddCatch by Goto Popup Page -->
 
     <Button
-        android:id="@+id/saveCatchButton"
+        android:id="@+id/btnOpenWeightPopup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="@string/addCatchBtn"
+        app:layout_constraintEnd_toStartOf="@+id/btnSetUp3"
+        app:layout_constraintHorizontal_bias="0.294"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtAddCatch" />
+
+    <!-- Save Button -->
+    <Button
+        android:id="@+id/btnSaveCatch"
         android:layout_width="199dp"
         android:layout_height="53dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="15dp"
         android:text="@string/save_catch"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtAddCatch"
         app:layout_constraintEnd_toEndOf="parent" />
 
+
+
+
+
+
+
+
+
+
+
+    <!-- List of Todays Catch -->
     <ListView
         android:id="@+id/simpleListView"
         android:layout_width="match_parent"
@@ -132,9 +91,11 @@
         android:dividerHeight="1dp"
         android:scrollbars="vertical"
         android:padding="8dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/speciesSpinner"
+        app:layout_constraintTop_toBottomOf="@id/btnSaveCatch"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
