--- a/app/src/main/res/layout/popup_weight_entry_tour_lbs.xml
+++ b/app/src/main/res/layout/popup_weight_entry_tour_lbs.xml
@@ -19,7 +19,7 @@
             android:id="@+id/txtPopupTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Enter Catch Details"
+            android:text="Enter Catch Details  - Lbs Ozs -"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:textStyle="bold" />
@@ -46,7 +46,7 @@
             android:textStyle="bold"
             android:layout_marginStart="16dp"
             android:background="@color/clip_white"
-            android:entries="@array/species_list" />
+                                                 />
 
         <!-- Weight Input (Lbs/Ozs) -->
 
@@ -58,7 +58,7 @@
             android:visibility="visible">
 
             <EditText
-                android:id="@+id/edtWeightLbs"
+                android:id="@+id/edtWeightTourLbs"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -67,61 +67,13 @@
                 android:inputType="number" />
 
             <EditText
-                android:id="@+id/edtWeightOz"
+                android:id="@+id/edtWeightTourOz"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="Oz"
                 android:inputType="number" />
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/layoutWeightKgs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <!-- Weight Input (Kgs) -->
-            <EditText
-                android:id="@+id/edtWeightKgs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Weight in Kgs"
-                android:inputType="numberDecimal" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="." />
-
-            <EditText
-                android:id="@+id/edtWeightGrams"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Grams"
-                android:inputType="number" />
-
-        </LinearLayout>
-
-        <!-- Length Input (Inches) -->
-        <EditText
-            android:id="@+id/edtLengthInches"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Length in Inches"
-            android:inputType="number"
-            android:visibility="gone" />
-
-        <!-- Length Input (CM) -->
-        <EditText
-            android:id="@+id/edtLengthCM"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Length in CM"
-            android:inputType="numberDecimal"
-            android:visibility="gone" />
 
         <!-- Save and Cancel Buttons -->
         <LinearLayout
